deploy/k8s/base/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meridian-controller
  namespace: meridian
  labels:
    app.kubernetes.io/name: meridian
    app.kubernetes.io/component: controller
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: meridian
        app.kubernetes.io/component: controller
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8443"
        prometheus.io/path: /metrics
    spec:
      serviceAccountName: meridian-controller
      securityContext:
        runAsNonRoot: true
        runAsUser: 1100
        fsGroup: 1100
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: controller
          image: meridian/controller:0.1.0
          ports:
            - containerPort: 8443
              name: https
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8443
              scheme: HTTPS
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
          volumeMounts:
            - name: pki
              mountPath: /etc/meridian/pki
              readOnly: true
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: pki
          secret:
            secretName: meridian-controller-pki
        - name: tmp
          emptyDir: {}
